--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-	"name": "lsp-sample",
-	"description": "A language server example",
-	"author": "Microsoft Corporation",
+	"name": "kind-language-server",
+	"description": "A language server for kind language",
+	"author": "Rafael Santos",
 	"license": "MIT",
 	"version": "1.0.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/rafaelnsantos/kind-language-server"
 	},
-	"publisher": "vscode-samples",
-	"categories": [],
+	"categories": ["Programming Languages"],
 	"keywords": [
-		"multi-root ready"
+		"kind",
+		"language server"
 	],
 	"engines": {
 		"vscode": "^1.63.0"
 	},
 	"activationEvents": [
-		"onLanguage:plaintext"
+		"onLanguage:kind"
 	],
 	"main": "./client/out/extension",
 	"contributes": {
