--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "lsp-sample-client",
-	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
+	"name": "lsp-kind-client",
+	"description": "VSCode part of kind language server",
+	"author": "Rafael Santos",
 	"license": "MIT",
 	"version": "0.0.1",
 	"publisher": "vscode",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/rafaelnsantos/kind-language-server"
 	},
 	"engines": {
 		"vscode": "^1.63.0"
