--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	"publisher": "RafaelSantos",
 	"author": "Rafael Santos",
 	"license": "MIT",
-	"version": "1.0.2",
+	"version": "1.0.4",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rafaelnsantos/kind-language-server"
 	},
-	"categories": ["Programming Languages"],
+	"categories": [
+		"Programming Languages"
+	],
 	"keywords": [
 		"kind",
 		"language server"
@@ -60,10 +62,11 @@
 		"test": "sh ./scripts/e2e.sh"
 	},
 	"devDependencies": {
+		"@monx/eslint-config-next": "^1.0.7",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^14.17.0",
 		"@typescript-eslint/eslint-plugin": "^5.19.0",
-		"@typescript-eslint/parser": "^5.19.0",
+		"@typescript-eslint/parser": "^5.25.0",
 		"eslint": "^8.13.0",
 		"mocha": "^9.2.1",
 		"typescript": "^4.6.3"
