--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,17 @@
 {
-	"name": "lsp-sample-server",
-	"description": "Example implementation of a language server in node.",
+	"name": "lsp-kind-server",
+	"description": "Implementation of kind language server in node.",
 	"version": "1.0.0",
-	"author": "Microsoft Corporation",
+	"author": "Rafael Santos",
 	"license": "MIT",
 	"engines": {
 		"node": "*"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/rafaelnsantos/kind-language-server"
 	},
 	"dependencies": {
-		"kind-lang": "^1.0.119",
 		"vscode-languageserver": "^7.0.0",
 		"vscode-languageserver-textdocument": "^1.0.4"
 	},
