--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"publisher": "RafaelSantos",
 	"author": "Rafael Santos",
 	"license": "MIT",
-	"version": "1.0.4",
+	"version": "1.0.6",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rafaelnsantos/kind-language-server"
@@ -31,15 +31,15 @@
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "Kind Language Server configuration",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
+				"kindLanguageServer.maxNumberOfProblems": {
 					"scope": "resource",
 					"type": "number",
 					"default": 100,
 					"description": "Controls the maximum number of problems produced by the server."
 				},
-				"languageServerExample.trace.server": {
+				"kindLanguageServer.trace.server": {
 					"scope": "window",
 					"type": "string",
 					"enum": [
@@ -49,6 +49,12 @@
 					],
 					"default": "off",
 					"description": "Traces the communication between VS Code and the language server."
+				},
+				"kindLanguageServer.projectRootFolder": {
+					"scope": "window",
+					"type": "string",
+					"default": "",
+					"description": "Project root folder"
 				}
 			}
 		}
