fix: parse error

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,3 +4,9 @@ Kind/blog
 Kind/web
 Kind/base/Ether/RLP/aux.kind
 Kind/base/App/**
+node_modules/
+server/node_modules/
+client/node_modules/
+*.vsix
+scripts/
+Kind/
